# django_electronics_store

./: README.md  pyproject.toml
django_electronics_store/: .env.example  manage.py  requirements.dev.txt  requirements.txt
django_electronics_store/django_electronics_store/: asgi.py  settings.py  urls.py  wsgi.py
django_electronics_store/links/: admin.py  permissions.py  urls.py
django_electronics_store/links/models/: __init__.py  address.py  contacts.py  factories.py  participant.py  products.py  supplier.py
django_electronics_store/links/serializers/: __init__.py  address.py  dealerships.py  distributors.py  factories.py  individual_entrepreneurs.py  products.py  retail_chains.py  supplier.py
django_electronics_store/links/views/: __init__.py  factories.py
django_electronics_store/users/: admin.py  models.py  serializers.py  urls.py  views.py
